src/test/resources/scripts/language/parser/invalid/assignment/noVoidAssignment.sbsc
// parser should fail when trying to assign UNIT to a value.

a = if(true) println("a");

return false;